--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "url": "git@github.com:lukekarrys/js-size.git"
   },
   "scripts": {
-    "test": "./node_modules/lab/bin/lab -m 40000"
+    "test": "lab -m 40000"
   }
 }
