--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "chai": "^3.5.0",
     "git-validate": "^2.1.4",
     "lab": "^10.9.0",
-    "standard": "^7.1.2"
+    "standard": "^8.0.0-beta.3"
   },
   "homepage": "https://github.com/lukekarrys/js-size",
   "keywords": [
