--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "author": "Luke Karrys",
   "bin": {
-    "js-size": "./cli.js"
+    "js-size": "lib/cli.js"
   },
   "bugs": {
     "url": "https://github.com/lukekarrys/js-size/issues"
@@ -17,14 +17,12 @@
     "uglify-js": "^3.0.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.14.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.3.0",
-    "chai": "^3.5.0",
-    "git-validate": "^2.1.4",
     "eslint": "^3.19.0",
-    "lab": "^13.0.0",
-    "standard": "^10.0.1"
+    "execa": "^0.6.3",
+    "git-validate": "^2.1.4",
+    "jquery": "^3.2.1",
+    "standard": "^10.0.1",
+    "tape": "^4.6.3"
   },
   "engines": {
     "node": ">=4"
@@ -36,7 +34,7 @@
     "minify"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "lib/index.js",
   "pre-commit": [
     "lint",
     "test",
@@ -47,8 +45,10 @@
     "url": "git@github.com:lukekarrys/js-size.git"
   },
   "scripts": {
+    "example": "cat ./node_modules/jquery/dist/jquery.slim.js | ./lib/cli.js",
+    "example:file": "./lib/cli.js ./node_modules/jquery/dist/jquery.slim.js",
     "lint": "standard",
-    "test": "lab -m 60000 -I __core-js_shared__",
+    "test": "tape test/index.js",
     "validate": "npm ls"
   }
 }
