--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,8 @@ node_js:
     - 4
     - 5
     - 6
+before_script:
+  NPM_VERSION=`npm --version`
+  NPM_VERSION="${V%%.*}"
+  if [[ "$NPM_VERSION" == "2" ]]; then npm install -g npm@latest; fi;
 script: npm run lint && npm run validate && npm test
