--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cli-table": "^0.3.1",
     "concat-stream": "^1.5.1",
     "gzip-size": "^3.0.0",
+    "meow": "^3.7.0",
     "pretty-bytes": "^4.0.2",
+    "uglify-es": "^3.0.3",
     "uglify-js": "^3.0.1"
   },
   "devDependencies": {
