fix error checking; pass back correct error when trying es fallback

--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "lint": "standard",
     "test": "tape test/index.js",
     "validate": "npm ls"
+  },
+  "standard": {
+    "ignore": [
+      "test/fixtures/bad-*.js"
+    ]
   }
 }
